--- a/AppProduct/appsettings.json
+++ b/AppProduct/appsettings.json
@@ -9,5 +9,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Data Source=AppProduct-ApplicationDbContext.sqlite"
+  },
+  "MicrosoftGraph": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "TenantId": "",
+    "SenderEmail": ""
+  },
+  "EmailNotifications": {
+    "AdminEmail": "",
+    "Enabled": true
   }
 }
