--- a/AppProduct/AppProduct.csproj
+++ b/AppProduct/AppProduct.csproj
@@ -20,6 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
     <!-- Semantic Kernel for AI integration -->
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.31.0" />
+    <!-- Microsoft Graph API for email notifications -->
+    <PackageReference Include="Microsoft.Graph" Version="5.89.0" />
+    <PackageReference Include="Azure.Identity" Version="1.14.1" />
   </ItemGroup>
 
   <ItemGroup>
