--- a/AppProduct/appsettings.json
+++ b/AppProduct/appsettings.json
@@ -19,5 +19,9 @@
   "EmailNotifications": {
     "AdminEmail": "",
     "Enabled": true
+  },
+  "Stripe": {
+    "PublishableKey": "",
+    "SecretKey": ""
   }
 }
