--- a/AppProduct/AppProduct.csproj
+++ b/AppProduct/AppProduct.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0" />
+    <PackageReference Include="QuestPDF" Version="2025.7.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
     <!-- Semantic Kernel for AI integration -->
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.31.0" />
